File: src/main/java/com/zensar/ankit/demo/advice/CustomExceptionHandler.java